# What-if-Studio

./: .env.example  .gitignore  AGENTS.md  AgentNetwork-Red-master_前后端设计参考.md  Dockerfile  README.md  STARTUP.md  alembic.ini  iopho-skills-main_参考说明文档.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
agents/: .env.example  __init__.py  debate_module.py  pipeline.py  requirements.txt  schemas.py  video_module.py  workflow_module.py
alembic/: env.py
alembic/versions/: d59d2a92a78e_initial_schema_with_refactor_models.py
anet-services/: agent_collector.py  agent_composer.py  agent_director.py  agent_editor.py  register_agents.py  requirements.txt  run_local_demo.ps1  setup_windows.ps1  start_agents.ps1  test_call.py
apps/api/: package.json
apps/web/: .env.example  package.json  vite.config.js
config/: agents.yaml  directors.yaml
scripts/: init_db.py  integration_test.py  test_endpoints.py
src/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
src/agents/: __init__.py  autogen_service.py  langgraph_service.py  orchestrator.py
src/api/: agents.py  assets.py  gateway.py  jobs.py  projects.py  sessions.py  video_jobs.py  ws.py
src/core/: agent_catalog.py  agent_gateway.py  anet_gateway.py  discussion_engine.py  memory_service.py  model_router.py  render_service.py  (+1 more)
tests/: conftest.py  test_api_integration.py  test_assets_api.py  test_generate_api.py  test_prepare_api.py  test_projects_api.py  test_smoke_startup.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
(+45 files in other folders)
